@@ -1,0 +1,3 @@
+# Target: UltraSPARC, running Linux 64bit programs
+TDEPFILES= sparc-tdep.o solib.o solib-svr4.o
+TM_FILE= tm-sp64linux.h
