@@ -283,6 +283,7 @@ sparc86x-*-*)		gdb_target=sparclite ;;
 # regs (some of which are usable in v8plus) so sp64sol.mt hasn't been
 # deleted though presumably it should be eventually.
 #sparc64-*-solaris2*)	gdb_target=sp64sol2 ;;
+sparc64-*-linux*)	gdb_target=sp64linux ;;
 sparc64-*-*)		gdb_target=sp64 ;;
 
 tic80-*-*)		gdb_target=tic80
